<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <group android:id="@+id/menu_actionbar">
        <item
            android:id="@+id/menuitem_pesquisar"
            android:actionViewClass="android.widget.SearchView"
            android:icon="@android:drawable/ic_menu_search"
            app:showAsAction="always"
            android:title="@string/menu_item_pesquisar"/>

        <item
            android:id="@+id/menuitem_novo"
            android:icon="@drawable/ic_action_new"
            app:showAsAction="never"
            android:title="@string/menu_item_novo" />

        <item
            android:id="@+id/menuitem_salvar"
            android:icon="@drawable/ic_action_accept"
            app:showAsAction="never"
            android:title="@string/menu_item_salvar" />

        <item
            android:id="@+id/menuitem_excluir"
            android:icon="@drawable/ic_action_discard"
            app:showAsAction="never"
            android:title="@string/menu_item_excluir"
            />
        <item
            android:id="@+id/menuitem_cancelar"
            android:icon="@drawable/ic_action_cancel"
            app:showAsAction="never"
            android:title="@string/menu_item_cancelar"/>
    </group>
</menu>